app/assets/stylesheets/components/_banner.scss
.banner {
  color: white;
  text-align: center;
  height: calc(100vh - 70px);
  /* if you have a 70px navbar => height: calc(100vh - 70px); */
  background-size: cover !important;
  display: flex;
  align-items: center;
  justify-content: center;

}
.banner-small {
  height: 60vh;
}
.banner h1 {
  font-size: 50px;
  font-weight: bold;
  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
}
.banner p {
  font-size: 20px;
  font-weight: lighter;
  color: rgba(255, 255, 255, 0.7);
  margin-bottom: 20px;
}

/* Banner show exhibition */
.banner-company {
  color: black;
  text-align: center;
  height: 40vh;
  /* if you have a 70px navbar => height: calc(100vh - 70px); */
  background-size: cover !important;
  display: flex;
  align-items: center;
  justify-content: center;
}


/* Banner home (slideshow) */
#slideshow {
  height: calc(100vh - 70px);
  top: 70px;
  display: flex;
  justify-content: center;
  align-items: center;

  &, .slide {
    position: absolute;
    left: 0;
    width: 100%;
  }

  .slide {
    background-position: center;
    background-size: cover!important;
    opacity: 0;
    height: 100%;
    top: 0;

    &.previous {
      z-index: 1;
      opacity: 1;
    }

    &.current {
      z-index: 2;
      animation: fadein 5000ms linear both;
    }
  }

  .slideshow-content {
    z-index: 4;
    position: absolute;
    color: white;

    & h1 {
      font-size: 50px;
      font-weight: bold;
    }

    & p {
      margin-bottom: 30px;
      font-size: 20px;
    }

    & p.vanity-data {
    font-size: 20px;
    font-weight: bold;
    }
  }
}

@keyframes fadein {
  0%   { opacity: 0; }
  30%  { opacity: 1; }
  100% { opacity: 1; }
}

